--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ header {
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 2 10px;
     position: fixed;
     width: 100%;
     height: 80px;
@@ -28,7 +28,7 @@ header {
 
 .logo {
     /* Logo de la marca */
-    font-size: 2.8rem;
+    font-size: 3.0rem;
     font-weight: bold;
     margin: 0;
 }
@@ -48,6 +48,11 @@ header {
     display: flex;
     align-items: center;
     gap: 20px;
+    font-size: 2.0rem;
+}
+
+.iconos {
+    font-size: 2.3rem;
 }
 
 .main-nav a {
@@ -59,7 +64,7 @@ header {
     text-transform: uppercase;
     top: 20px;
     position: relative;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
 }
 
 .main-nav a:hover {
