--- a/assets/css/Media-Querys.css
+++ b/assets/css/Media-Querys.css
@@ -224,3 +224,15 @@
         max-width: 100%;
     }
 }
+
+/* --- RESPONSIVE --- */
+@media (max-width: 768px) {
+    .detalle-producto {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .imagen-producto img {
+        max-width: 100%;
+    }
+}
