--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,25 +423,13 @@ footer {
     margin-right: 10px;
 }
 
-/* --- RESPONSIVE --- */
-@media (max-width: 768px) {
-    .detalle-producto {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .imagen-producto img {
-        max-width: 100%;
-    }
-}
-
 /* --- header en pagina de producto --- */
 body.pagina-producto #header-container {
-    background-color: black !important;
+    background-color: rgb(255, 255, 255) !important;
 }
 
 body.pagina-producto .letrasNavbar {
-    color: white !important;
+    color: rgb(0, 0, 0) !important;
 }
 /* entre header y body */
 body.pagina-producto main {
