--- a/assets/css/formulario.css
+++ b/assets/css/formulario.css
@@ -1,12 +1,15 @@
- body.formulario {
-            font-family: Arial, sans-serif;
-            background-image: url(/assets/media/images/fondo\ formulario.webp);
-            background-size: cover;
-            background-position: absolute;
-            background-repeat: no-repeat;
-            height: 100vh;
-        }
+body {
+    background-image: url(/assets/media/images/fondo\ formulario.webp);
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 110vh;
+}
 
+        .formLogin {
+            font-family: Arial, sans-serif;
+        }
+        
         .container-formulario {
             opacity: 0.87;
             max-width: 400px;
@@ -33,10 +36,11 @@
         label {
             display: block;
             margin-bottom: 6px;
+            font-size: 1.2rem;
         }
 
-        input,
-        select {
+        .input1,
+        #documento {
             width: 96%;
             padding: 8px;
             margin-bottom: 16px;
@@ -44,20 +48,24 @@
             border-radius: 4px;
         }
 
-        button {
+        #documento {
+            font-size: 1.1rem;
+        }
+
+        .button1 {
             width: 100%;
             padding: 10px;
             background: black;
             color: #fff;
             border: none;
             border-radius: 4px;
-            font-size: 16px;
+            font-size: 1.1rem;
             cursor: pointer;
         }
 
-        button:hover {
+        .button1:hover {
             background: #51904b;
-        }
+        } 
 
         .checkbox-label {
             white-space: nowrap;
@@ -69,7 +77,14 @@
             justify-content: flex-start;
         }
 
+        .checkbox1 {
+            margin-right: 20px;
+            margin-bottom: 20px;
+            transform: scale(1.2);
+            /* Quita márgenes extra del checkbox */
+        }
+
         .checkbox-input {
             margin: 0;
-            /* Quita márgenes extra del checkbox */
+            /* Quita márgenes extra del checkbox  */
         }
