--- a/assets/css/inicioSesion.css
+++ b/assets/css/inicioSesion.css
@@ -3,20 +3,26 @@ body {
             background-size: cover;
             background-position: absolute;
             background-repeat: no-repeat;
+            height: 100vh;
+        }
+
+        .formRegistro{
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
         }
+
         .login-container {
             background: #fff;
             padding: 2rem 2.5rem;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            width: 100%;
-            max-width: 350px;
+            width: 400px;
             opacity: 0.8;
+            margin-top: 100px;
+            margin-bottom: 150px;
+            height: 450px;
         }
 
         .login-container:hover {
@@ -30,6 +36,7 @@ body {
             text-align: center;
             margin-bottom: 1.5rem;
             color: #333;
+            font-size: 1.9rem;
         }
         .form-group {
             margin-bottom: 1.2rem;
@@ -38,14 +45,17 @@ body {
             display: block;
             margin-bottom: 0.4rem;
             color: #555;
+            margin-top: 30px;
+            font-size: 1.2rem;
         }
-        input[type="text"],
-        input[type="password"] {
+        .input1,
+        .input2 {
             width: 100%;
             padding: 0.6rem;
             border: 1px solid #ccc;
             border-radius: 4px;
             font-size: 1rem;
+            margin-top: 20px;
         }
         .login-btn {
             width: 100%;
@@ -57,6 +67,8 @@ body {
             font-size: 1.1rem;
             cursor: pointer;
             transition: background 0.2s;
+            margin-top: 55px;
+            font-size: 1.3rem;
         }
         .login-btn:hover {
             background: #51904b;
@@ -67,7 +79,7 @@ body {
             margin-top: 1rem;
             color: #51904b;
             text-decoration: none;
-            font-size: 0.95rem;
+            font-size: 1.1rem;
         }
         .register-link:hover {
             text-decoration: underline;
