--- a/assets/css/formulario.css
+++ b/assets/css/formulario.css
@@ -12,7 +12,7 @@ body {
         
         .container-formulario {
             opacity: 0.87;
-            max-width: 400px;
+            width: 500px;
             margin: 40px auto;
             background: #fff;
             padding: 24px;
@@ -64,7 +64,8 @@ body {
         }
 
         .button1:hover {
-            background: #51904b;
+            background: #bae1f7;
+            color: black;
         } 
 
         .checkbox-label {
