--- a/assets/css/inicioSesion.css
+++ b/assets/css/inicioSesion.css
@@ -3,7 +3,7 @@ body {
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            height: 100vh;
+            height: 55rem;
         }
 
         .formRegistro{
