--- a/assets/css/formulario.css
+++ b/assets/css/formulario.css
@@ -3,7 +3,7 @@ body {
     background-size: cover; 
     background-position: center;
     background-repeat: no-repeat;
-    height: 110vh;
+    height: 55rem;
 }
 
         .formLogin {
